perf: optimize string validation in GameScoreManager(SpotBugs)