@@ -111,7 +111,7 @@ public class GameScoreManager implements ScoreManager<Entry> {
     public void endGame(final String name) {
         Objects.requireNonNull(name, "Name cannot be null");
 
-        if (name.trim().isEmpty()) {
+        if (name.isBlank()) {
             throw new IllegalArgumentException("Player name cannot be null or empty");
         }
 
